--- a/Portfolio.html
+++ b/Portfolio.html
@@ -30,12 +30,14 @@
 	
 	<!-- Unorderlist of skills -->
 	<ul>
-	<li>Problem-solving</li>
-	<li>Critical-Thinking
-	<li>Bilingual in Spanish and English</li>
-	<li>Communication Skills</li>
-	<li>JavaScripts</li>
+	<li>Java</li>
 	<li>Notepad++</li>
+	<li>C</li>
+	<li>C++</li>
+	<li>C#</li>
+	<li>Word Office</li>
+	<li>Word PowerPoint</li>
+	<li>Command-line</li>
 	</ul>
 	
 	<!-- Education heading -->
