--- a/Portfolio.html
+++ b/Portfolio.html
@@ -1,33 +1,22 @@
 <!DOCTYPE html>
 <html>
-
-<!-- Head Section content -->
 <head>
-
-	<!-- Page title -->
-	<title>Alexandra Perez's Portfolio</title>
+	<link rel="stylesheet" href="style.css">
+	<title>Alexandra Perez's Resume</title>
 </head>
-
-<!-- Body Section Content -->
 <body>
-
-	<!-- My name -->
-	<h1 style="text-align:center">Alexandra Perez</h1>
-	
+	<h1>Alexandra Perez</h1>
 	<!-- About me heading -->
-	<h3>About me</h3
-	
+	<h3>Professional Summary</h3>
 	<!-- About me description -->
-	<p>I am a Junior with an 3.7 GPA at Georgia Southern University. Currently, I am pursuing a Bachelor
-	of Science in Computer Science degree. I am one of the founders of Technology Developers Association club at Georgia Southern at Armstrong Campus. 
-	As a dedicated student pursuing a career in Computer Science, it is my responsiblility to learn, and write programs with different software languages. 
+	<p>I am a Senior with an 3.75 GPA at Georgia Southern University. Currently, I am pursuing an Bachelor
+	of Science in Computer Science. I am one of the founders of Technology Developers Association at Georgia Southern at Armstrong Campus. 
+	As a dedicated student pursuing a career in Computer Science field, it is my responsiblility to learn, write, and debug programs with different software languages. 
 	I am seeking a position to be able to use my coding and problem-solving skills in a professional 
 	workplace, as well as, learn new abilities and skills from professionals with years of experience. 
 	</p>
-	
 	<!-- Skills heading -->
 	<h3>Skills</h3>
-	
 	<!-- Unorderlist of skills -->
 	<ul>
 	<li>Java</li>
@@ -38,23 +27,45 @@
 	<li>Word Office</li>
 	<li>Word PowerPoint</li>
 	<li>Command-line</li>
+	<li>SAPUI5</li>
+	<li>SAP</li>
+	<li>MySQL</li>
 	</ul>
-	
 	<!-- Education heading -->
 	<h3>Education</h3>
-	
 	<!-- Education information -->
 	<p>Georgia Southern University - Savannah, GA</p>
-	<p style = "text-align:right">Expected Graduation date: December 2024</p>
-	<p style = "text-align:right">Major: Computer Science</p>
-	<p> Woodville Tompkins High School - Garden City, GA</p>
-	<p style = "text-align:right">Graduation Date: May 2021</p>
-	
+	<p style="text-align: right;">Expected Graduation Date: December 2024</p>
+	<p style="text-align: right;">Computer Science 3.75 GPA</p>
+	<p>Woodville Tompkins High School - Garden City, GA</p>
+	<p style="text-align: right;">Graduation Date: May 2021 3.92 GPA</p>
 	<!-- Work Experience heading -->
 	<h3>Work Experience</h3>
-	
+	<!-- Job #5 -->
+	<p>May 2024 - Present</p>
+	<p>ERP Intern</p>
+	<p>Gulfstream Aerospace (Savannah, GA)</p>
+	<ul>
+	<li>Mobile App development experience.</li>
+	<li>SAP Project implementation experience.</li>
+	<li>Experience with SAPUI5 and OData services</li>
+	<li>Programming experience with JavaScript, and XML.</li>
+	<li>Good communication skills and ability to handle and prioritize multiple tasks working in a team environment.</li>
+	</ul>
+	<!-- Job #4 -->
+	<p>May 2023 - August 2023</p>
+	<p>ERP Intern</p>
+	<p>Gulfstream Aerospace (Savannah, GA)</p>
+	<ul>
+	<li>Mobile App development experience.</li>
+	<li>SAP Project implementation experience.</li>
+	<li>Experience with SAPUI5 and OData services</li>
+	<li>Programming experience with JavaScript, and XML.</li>
+	<li>Good communication skills and ability to handle and prioritize multiple tasks working in a team environment.</li>
+	</ul>
+
 	<!-- Job #3 -->
-	<p>May 2022 - Present Day</p>
+	<p>May 2022 - October 2023</p>
 	<p>Loyalty Center</p>
 	<p>Godley Station Dental (Pooler, GA)</p>
 	<ul>
@@ -69,8 +80,8 @@
 	<p>Sales Advisor</p>
 	<p>H&M (Pooler, GA)</p>
 	<ul>
-	<li>Responsible for assisting customers and excellent customer service<./li>
-	<li>Keeping racks and tables organized in a orderly fashion<./li>
+	<li>Responsible for assisting customers and excellent customer service.</li>
+	<li>Keeping racks and tables organized in a orderly fashion.</li>
 	<li>The ability to multi-task and complete task in a short period of time.</li>
 	</ul>
 	
@@ -105,7 +116,6 @@
 	<h3>Contact me</h3>
 	
 	<!-- Paragraph on how to contact me -->
-	<p>Fill free to contact me if you have any questions at 912-508-9204 or by email at perezalexandra1002@gmail.com.</p>
+	<p>Fill free to contact me if you have any questions by email at perezalexandra1002@gmail.com or LinkedIn </p>
 </body>
-
 </html>
